--- a/views/birddetail.pug
+++ b/views/birddetail.pug
@@ -6,7 +6,7 @@ block content
   - let birdid = toShow._id 
   - let birdName = toShow.birdName 
   - let birdWeight = toShow.birdWeight 
-  - let birdCost = toShow.birdCost 
+  - let birdColor = toShow.birdColor
   div 
     div.row 
     div(class='birdAttr mr-3') bird ID is: 
@@ -18,5 +18,5 @@ block content
     div(class='birdAttr mr-3') bird Weight is: 
     div #{birdWeight} 
     div.row 
-    div(class='birdAttr mr-3') bird Cost is: 
-    div #{birdCost} 
+    div(class='birdAttr mr-3') bird Color is: 
+    div #{birdColor} 
