--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,6 +8,21 @@ a {
 }
 
 .birdAttr { 
-  background-color: aquamarine; 
-  width: 120px; 
-} 
+  background-color: #80489C; 
+  color: white;
+  height: 30px;
+}
+
+.data {
+  border-bottom: 2px solid green;
+  height: 30px;
+  color: red;
+  margin-left: 12px;
+}
+
+.detailData {
+  border-bottom: 2px solid green;
+  height: 30px;
+  color: red;
+  margin-left: 12px;
+}
