--- a/views/bird.pug
+++ b/views/bird.pug
@@ -1,13 +1,36 @@
 extends layout
 
 block content
-  h1= title
-  - var result = results 
-  div.container-fluid
-     div.row
-        each item,index in result
-            div.col-sm-2(onclick=`buy(${index})`) birdName: #{item["birdName"]}  <br>  birdWeight: #{item["birdWeight"]} <br> birdColor: #{item["birdColor"]} 
+  div(class='container')
+        h1(style="text-align: center; color: #863A6F")= title
+        - var results = results
+        div(class='container' style="text-align: center;")  
+            div.row 
+                each item, index in results
+                    div(class='col-md')
+                        div(class='card', style='width: 17rem;')
+                            div(class='card-body')
+                                - let destination = `dispatch(\"/bird/update?id=${item._id}\")`
+                                div(class='card-text', onclick=`buy(${index})`) birdName: #{item["birdName"]}  <br>  birdWeight: #{item["birdWeight"]} <br> birdColor: #{item["birdColor"]}
+                                button.btn(class="btn-primary btn-sm ml-1", style="margin: 5px; width: 130px;", onclick= destination) Update
   script.
       function buy(index){
          alert("you purchased item "+(index+1))
       }
+      function dispatch(path) {
+            window.location.href = path;
+      }
+      passport.use(new LocalStrategy( 
+      function(username, password, done) { 
+      Account.findOne({ username: username }, function (err, user) { 
+      if (err) { return done(err); } 
+      if (!user) { 
+        return done(null, false, { message: 'Incorrect username.' }); 
+      } 
+      if (!user.validPassword(password)) { 
+        return done(null, false, { message: 'Incorrect password.' }); 
+      } 
+      return done(null, user); 
+    }); 
+  } 
+      
