--- a/views/index.pug
+++ b/views/index.pug
@@ -1,17 +1,11 @@
 extends layout
-
 block content
-  h1= title
-  p Welcome to the #{title} <br>
-    button(type='button',class='btn btn-primary' onClick="doBump()") Press Me
-    div(id="bump") Bump the count
-    a(href="bird") Bird
-    script.
-      let count =0
-      let bump=1
-      function doBump(){
-        count=count+bump 
-        bump=bump+1 
-        document.getElementById('bump').innerHTML=`count ${count} with bump ${bump}`
-
-      }
+  if (!user)
+   a(href="/login") Login
+   br
+   a(href="/register") Register
+  if (user)
+   p You are currently logged in as #{user.username}
+   a(href="/bird") Take me to bird
+   br
+   a(href="/logout") Logout
